--- a/src/pages/servicios.astro
+++ b/src/pages/servicios.astro
@@ -1,9 +1,6 @@
 ---
 import DefaultLayout from "../layouts/DefaultLayout.astro";
-import Hero from "../components/Hero.astro";
-import HomeServices from "../components/HomeServices.astro";
-import HomeProjects from "../components/HomeProjects.astro";
-import HomeAbout from "../components/HomeAbout.astro";
+import PageHeader from "../components/PageHeader.astro";
 import CTA from "../components/CTA.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -11,9 +8,6 @@ import CTA from "../components/CTA.astro";
 ---
 
 <DefaultLayout>
-  <Hero />
-  <HomeServices />
-  <HomeAbout />
-  <HomeProjects />
-  <CTA />
+  <PageHeader />
+  <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima facere soluta optio.</h1>
 </DefaultLayout>
