--- a/src/assets/scss/abstracts/_colors.scss
+++ b/src/assets/scss/abstracts/_colors.scss
@@ -4,34 +4,35 @@
 
 $colors: (
   primary: (
-    100: hsl(356, 100%, 53%),
-    200: hsl(356, 98%, 53%),
-    300: hsl(356, 89%, 45%),
-    400: hsl(356, 90%, 34%),
-    500: hsl(356, 89%, 29%),
+    100: hsl(0, 89%, 96%),
+    200: hsl(359, 95%, 77%),
+    300: hsl(357, 96%, 58%),
+    400: hsl(356, 89%, 25%),
+    500: hsl(359, 96%, 9%),
   ),
   secondary: (
-    100: #6befe0,
-    200: hsl(173, 80%, 63%),
-    300: hsl(173, 72%, 57%),
-    400: hsl(173, 75%, 47%),
-    500: hsl(173, 90%, 30%),
+    100: hsl(232, 79%, 96%),
+    200: hsl(227, 78%, 69%),
+    300: hsl(223, 61%, 44%),
+    400: hsl(223, 67%, 22%),
+    500: hsl(225, 80%, 10%),
   ),
   dark: (
-    100: hsl(226, 44%, 25%),
-    200: hsl(226, 43%, 20%),
-    300: hsl(226, 45%, 15%),
-    400: hsl(226, 44%, 10%),
-    500: hsl(224, 44%, 5%),
+    100: hsl(226, 42%, 34%),
+    200: hsl(226, 44%, 25%),
+    300: hsl(226, 46%, 18%),
+    400: hsl(226, 49%, 14%),
+    500: hsl(226, 57%, 9%),
   ),
   alert: (
-    100: hsl(46, 100%, 67%),
-    200: hsl(42, 100%, 67%),
-    300: hsl(39, 67%, 58%),
-    400: hsl(38, 48%, 45%),
-    500: hsl(39, 48%, 38%),
+    100: hsl(45, 96%, 67%),
+    200: hsl(46, 59%, 50%),
+    300: hsl(46, 62%, 36%),
+    400: hsl(47, 75%, 14%),
+    500: hsl(42, 83%, 5%),
   ),
-  neutral: (100: hsl(0 0% 100%),
+  neutral: (
+    100: hsl(0 0% 100%),
     200: hsl(200 23% 97%),
     300: hsl(200 12% 95%),
     400: hsl(205 12% 88%),
