--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,13 +14,13 @@ import { Icon } from 'astro-icon/components'
   <SkipLink />
   <Navigation>
     <li class="menu-item">
-      <Link href="/">Home</Link>
+      <Link href="/">Inicio</Link>
     </li>
     <!-- <li class="menu-item">
       <Link href="/blog/">Blog</Link>
     </li> -->
     <li class="menu-item">
-      <Link href="/portafolio/">Portfolio</Link>
+      <Link href="/portafolio/">Portafolio</Link>
     </li>
     <li class="menu-item has-dropdown">
       <button aria-haspopup="true" aria-expanded="false">
@@ -29,16 +29,16 @@ import { Icon } from 'astro-icon/components'
       </button>
       <ul class="dropdown-menu">
         <li class="submenu-item">
-          <Link href="/desarrollador-de-paginas-web">Creación de Páginas Web</Link>
+          <Link href="/servicios/desarrollador-de-paginas-web">Creación de Páginas Web</Link>
         </li>
         <li class="submenu-item">
-          <Link href="/desarrollador-de-tiendas-online">Creación de Tiendas Online</Link>
+          <Link href="/servicios/desarrollador-de-tiendas-online">Creación de Tiendas Online</Link>
         </li>
         <li class="submenu-item">
-          <Link href="/mantenimiento-web">SEO y Optimización Web</Link>
+          <Link href="/servicios/optimizacion-seo-y-posicionamiento">SEO y Optimización Web</Link>
         </li>
         <li class="submenu-item">
-          <Link href="/optimizacion-seo-y-posicionamiento">Mantenimiento Web</Link>
+          <Link href="/servicios/mantenimiento-web">Mantenimiento Web</Link>
         </li>
       </ul>
     </li>
@@ -55,8 +55,13 @@ import { Icon } from 'astro-icon/components'
 </header>
 
 <style lang="scss" is:global>
+  @use '../assets/scss/abstracts/colors.scss' as *;
+
   header {
+    background-color: var(--header-bg);
     padding-block: var(--space-xs-s);
+    border-bottom: 0.3em solid var(--alert-100);
+    //border: 0.2em solid var(--alert-100);
     
     .type-icon {
       display: block;
