--- a/src/components/HomeProjects.astro
+++ b/src/components/HomeProjects.astro
@@ -1,63 +1,60 @@
 ---
 import { Media } from "accessible-astro-components";
+import { Picture } from 'astro:assets';
+import VisitSite from "../assets/icons/misc/CarbonArrowUpRight.svg";
+import facScreenshot from "../assets/img/projects/fac-screenshot.png";
+import crsScreenshot from "../assets/img/projects/crs-screenshot.png";
+import ascendoScreenshot from "../assets/img/projects/ascendodesign-screenshot.png";
+import creditycasaScreenshot from "../assets/img/projects/creditycasa-screenshot.png";
 ---
 
-<section class="projects">
+<section class="home-section | projects-section">
   <div class="container">
     <h2>Algunos de los proyectos en los que he trabajado</h2>
+    <p></p>
     <ul class="grid">
       <li>
-        <article class="flow">
-          <Media
-            class="rounded-lg"
-            src="https://images.unsplash.com/photo-1620428268482-cf1851a36764?auto=format&fit=crop&q=100&w=800"
-            alt="Credit Restructuring Solutions"
-          />
+        <article class="card-1 flow">
+          <Picture src={crsScreenshot} formats={['avif', 'webp']} alt="Credit Restructuring Solutions screenshot" />
           <h3>Credit Restructuring Solutions</h3>
-          <a class="button" href="#">Visit Site</a>
+          <a class="button" href="https://creditrestructuringsolutions.com/" target="_blank">Visitar sitio Web <VisitSite/></a>
         </article>
       </li>
       <li>
-        <article class="flow">
-          <Media
-            class="rounded-lg"
-            src="https://images.unsplash.com/photo-1620428268482-cf1851a36764?auto=format&fit=crop&q=100&w=800"
-            alt="Fundación Arquitectura y Ciudad"
-          />
+        <article class="card-1 flow">
+          <Picture src={facScreenshot} formats={['avif', 'webp']} alt="Fundación Arquitectura y Ciudad screenshot" />
           <h3>Fundación Arquitectura y Ciudad</h3>
-          <a class="button" href="#">Visit Site</a>
+          <a class="button" href="https://fundaayc.com/" target="_blank">Visitar sitio Web <VisitSite/></a>
         </article>
       </li>
       <li>
-        <article class="flow">
-          <Media
-            class="rounded-lg"
-            src="https://images.unsplash.com/photo-1620428268482-cf1851a36764?auto=format&fit=crop&q=100&w=800"
-            alt="Azuquita Cósmica"
-          />
-          <h3>Azuquita Cósmica</h3>
-          <a class="button" href="#">Visit Site</a>
+        <article class="card-1 flow">
+          <Picture src={creditycasaScreenshot} formats={['avif', 'webp']} alt="Credit y Casa screenshot" />
+          <h3>Credit y Casa</h3>
+          <a class="button" href="https://creditycasa.com/" target="_blank">Visitar sitio Web <VisitSite/></a>
         </article>
       </li>
       <li>
-        <article class="flow">
-          <Media
-            class="rounded-lg"
-            src="https://images.unsplash.com/photo-1620428268482-cf1851a36764?auto=format&fit=crop&q=100&w=800"
-            altt="Mejora tu Credit"
-          />
-          <h3>Mejora tu Credit</h3>
-          <a class="button" href="#">Visit Site</a>
+        <article class="card-1 flow">
+          <Picture src={ascendoScreenshot} formats={['avif', 'webp']} alt="ASCENDO Design screenshot" />
+          <h3>ASCENDO Design</h3>
+          <a class="button" href="https://ascendodesign.com/" target="_blank">Visitar sitio Web <VisitSite/></a>
         </article>
       </li>
     </ul>
   </div>
 </section>
 
-<style>
-  article {
-    border: 3px solid light-dark(hsl(0 0% 10%), hsl(0 0% 90%));
-    border-radius: 0.5em;
-    padding: 1em;
+<style lang="scss">
+  .projects-section {
+    .grid {
+      --minimun: 40ch;
+    }
+
+    img {
+      aspect-ratio: auto;
+      max-width: 100%;
+      height: auto;
+    }
   }
 </style>
