--- a/src/components/SiteMeta.astro
+++ b/src/components/SiteMeta.astro
@@ -3,7 +3,7 @@ import { ClientRouter } from "astro:transitions";
 
 const { title, description, url, image, author } = Astro.props;
 
-let subtitle = "Accessible Astro Starter";
+let subtitle = "Desarrollador Web Freelance";
 ---
 
 <!-- general meta -->
