Created Page Header component

--- a/src/pages/desarrollo-web.astro
+++ b/src/pages/desarrollo-web.astro
@@ -1,1 +1,9 @@
-<h1>Desarrollo Web</h1>
+---
+
+import PageHeader from "../components/page/PageHeader.astro"
+---
+
+
+<PageHeader
+  title="Portafolio"
+  description="An example of a portfolio using the Astro Content Collections."/>
