--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,11 +2,10 @@
 // | Globals
 // | -------------------------------------------------------------
 
-
-@use 'abstracts';
-@use 'base';
-@use 'components';
-@use 'layout';
-// @use 'pages';
-@use 'utilities';
+@use "abstracts";
+@use "base";
+@use "components";
+@use "layout";
+@use "pages";
+@use "utilities";
 // @use 'vendor/prism.css'
