--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -55,7 +55,7 @@ const currentYear = new Date().getFullYear();
 <style lang="scss">
   .footer {
     background-color: var(--footer-bg);
-    padding-block-start: var(--space-xs-s);
+    padding-block-start: var(--space-s-m);
     border-top: 0.3em solid var(--primary-300);
     color: var(--footer-color);
 
