--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@ import { Icon } from 'astro-icon/components'
  */
 ---
 
-<header>
+<header role="banner" class="site-header">
   <SkipLink />
   <Navigation>
     <li class="menu-item">
@@ -57,7 +57,7 @@ import { Icon } from 'astro-icon/components'
 <style lang="scss" is:global>
   @use '../assets/scss/abstracts/colors.scss' as *;
 
-  header {
+  .site-header {
     background-color: var(--header-bg);
     padding-block: var(--space-xs-s);
     border-bottom: 0.3em solid var(--alert-100);
