--- a/src/pages/desarrollo-web.astro
+++ b/src/pages/desarrollo-web.astro
@@ -1,9 +1,9 @@
 ---
 
-import PageHeader from "../components/page/PageHeader.astro"
+import PageBanner from "../components/page/PageBanner.astro"
 ---
 
 
-<PageHeader
+<PageBanner
   title="Portafolio"
   description="An example of a portfolio using the Astro Content Collections."/>
