--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import ContactSection from "../components/page/ContactSection.astro";
 
 <DefaultLayout>
   <HomeHero />
-  <HomeServices />
+  <HomeServices title="Estos son los servicios que ofrezco." />
   <HomeAbout />
   <HomeProjects />
   <ContactSection />
