--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -25,7 +25,6 @@
   --step-5: clamp(2.7994rem, 1.9432rem + 4.281vw, 5.2609rem);
 }
 
-
 body {
   font-family: var(--font-family-default);
   text-shadow: rgba(0, 0, 0, 0.01) 0 0 1px;
@@ -88,8 +87,8 @@ body {
     line-height: 2.8125rem;
 
     @include breakpoint(medium) {
-      font-size: 2.25rem;
-      line-height: 3.375rem;
+      font-size: var(--step-3);
+      line-height: 1;
     }
   }
 
@@ -98,7 +97,7 @@ body {
     line-height: 2.25rem;
 
     @include breakpoint(medium) {
-      font-size: 1.875rem;
+      font-size: var(--step-2);
       line-height: 2.8125rem;
     }
   }
@@ -108,7 +107,7 @@ body {
     line-height: 1.875rem;
 
     @include breakpoint(medium) {
-      font-size: 1.5rem;
+      font-size: var(--step-1);
       line-height: 2.25rem;
     }
   }
