--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -390,7 +390,7 @@ import Logo from '../assets/img/rafael-calvo-desarrollador-web-freelance-logo.sv
         box-shadow: var(--elevation-4);
         border: 2px solid var(--border-color-subtle);
         border-radius: var(--radius-l);
-        background-color: var(--neutral-background);
+        background-color: var(--header-bg);
         padding: var(--space-m);
         min-inline-size: 275px;
 
